# GLSocketTest

./: CMakeLists.txt
include/: GGLEpoll.h  GGLSelectMultiIO.h  GGLThreadPool.h  GLSocketClient.hpp  GLSocketServer.hpp  GglClassAnnotation.h  MyTestAnnotation.h
src/: CMakeLists.txt  ClientApp.cpp  GGLEpoll.cpp  GGLSelectMultiIO.cpp  GGLThreadPool.cpp  GLSocketClient.cpp  GLSocketServer.cpp  ServerApp.cpp  testMacro.cpp
